--- a/action.yml
+++ b/action.yml
@@ -48,11 +48,11 @@ inputs:
 
 # Define your outputs here.
 outputs:
-  outfile: 
+  bam: 
     description: alignment bam
     value: ${{ inputs.outdir }}/${{ inputs.sample }}.bam
 
-  outfile: 
+  align_stat: 
     description: hista2 alignment stderr
     value: ${{ inputs.outdir }}/${{ inputs.sample }}.hisat2.stderr
 
