--- a/action.yml
+++ b/action.yml
@@ -57,8 +57,14 @@ outputs:
     value: ${{ inputs.outdir }}/${{ inputs.sample }}.hisat2.stderr
 
 runs:
-  using: docker
-  image: Dockerfile
+  #using: docker
+  #image: Dockerfile
+  run: |
+    make -f ./Makefile sample=$sample strand_specific=$strand_specific \
+  seq_type=$seq_type genome_index=$genome_index gtf=$gtf \
+  cpu=$cpu fq1=$fq1 fq2=$fq2 outdir=$outdir \
+  Splicesite Alignment HTseq InsertSize FragSize
+
   env:
     strand_specific: ${{ inputs.strand_specific }}
     seq_type: ${{ inputs.seq_type }}
