--- a/action.yml
+++ b/action.yml
@@ -59,6 +59,10 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        
     - name: align and count
       shell: bash
       env:
