--- a/action.yml
+++ b/action.yml
@@ -59,9 +59,14 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+    #- uses: actions/checkout@v4
+    #  with:
+    #    fetch-depth: 0
+    - name: Set GitHub Path
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
+      shell: bash
+      env:
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
 
     - name: align and count
       shell: bash
